--- a/.gitignore
+++ b/.gitignore
@@ -54,12 +54,13 @@ cover/
 # Translations
 *.mo
 *.pot
-
+.idea
 # Django stuff:
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.db
 
 # Flask stuff:
 instance/
@@ -158,3 +159,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+alembic.ini
+alembic
