--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ alembic==1.11.3
 annotated-types==0.5.0
 anyio==3.7.1
 certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
 dnspython==2.4.2
@@ -28,12 +29,14 @@ pydantic_core==2.4.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
 sqlalchemy-stubs==0.4
 starlette==0.27.0
 typing_extensions==4.7.1
 ujson==5.8.0
+urllib3==2.0.4
 uvicorn==0.23.2
 watchfiles==0.19.0
 websockets==11.0.3
