--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+venv
 # C extensions
 *.so
-
+.idea
+city_temperature.db
 # Distribution / packaging
 .Python
 build/
