--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,18 @@ click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.1.3
 fastapi==0.103.0
+flake8==6.1.0
+flake8-quotes==3.3.2
+flake8-variables-names==0.0.6
 h11==0.14.0
 idna==3.4
+mccabe==0.7.0
+pep8-naming==0.13.3
+pycodestyle==2.11.0
 pydantic==2.3.0
 pydantic_core==2.6.3
+pyflakes==3.1.0
 sniffio==1.3.0
-starlette==0.31.1
+starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.2
