--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,21 @@ fastapi==0.103.0
 flake8==6.1.0
 flake8-quotes==3.3.2
 flake8-variables-names==0.0.6
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 mccabe==0.7.0
+mypy==1.5.1
+mypy-extensions==1.0.0
 pep8-naming==0.13.3
 pycodestyle==2.11.0
 pydantic==2.3.0
 pydantic_core==2.6.3
 pyflakes==3.1.0
 sniffio==1.3.0
+SQLAlchemy==2.0.20
+sqlalchemy-stubs==0.4
 starlette==0.27.0
+tomli==2.0.1
 typing_extensions==4.7.1
 uvicorn==0.23.2
