--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+alembic==1.11.3
 annotated-types==0.5.0
 anyio==3.7.1
+black==23.7.0
 click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.1.3
@@ -10,10 +12,15 @@ flake8-variables-names==0.0.6
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+Mako==1.2.4
+MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy==1.5.1
 mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
 pep8-naming==0.13.3
+platformdirs==3.10.0
 pycodestyle==2.11.0
 pydantic==2.3.0
 pydantic_core==2.6.3
