--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
 aiosqlite==0.19.0
 alembic==1.11.3
 annotated-types==0.5.0
 anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
 black==23.7.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.1.3
@@ -10,12 +16,16 @@ fastapi==0.103.0
 flake8==6.1.0
 flake8-quotes==3.3.2
 flake8-variables-names==0.0.6
+frozenlist==1.4.0
 greenlet==2.0.2
 h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
 Mako==1.2.4
 MarkupSafe==2.1.3
 mccabe==0.7.0
+multidict==6.0.4
 mypy==1.5.1
 mypy-extensions==1.0.0
 packaging==23.1
@@ -26,6 +36,7 @@ pycodestyle==2.11.0
 pydantic==2.3.0
 pydantic_core==2.6.3
 pyflakes==3.1.0
+python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
 sqlalchemy-stubs==0.4
@@ -33,3 +44,4 @@ starlette==0.27.0
 tomli==2.0.1
 typing_extensions==4.7.1
 uvicorn==0.23.2
+yarl==1.9.2
