WEATHER_API_KEY env variable description moved to README.md

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-WEATHER_API_KEY= your weather api key (To get one you need to register on https://www.weatherapi.com/)
+WEATHER_API_KEY= your weather api key
