--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,19 @@ Mako==1.2.4
 MarkupSafe==2.1.3
 pydantic==2.3.0
 pydantic_core==2.6.3
+python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
 starlette==0.27.0
 typing_extensions==4.7.1
+
+pip~=22.3.1
+attrs~=23.1.0
+Pillow~=10.0.0
+utils~=1.0.1
+click~=8.1.7
+mypy~=1.5.1
+PyYAML~=6.0.1
+httpx~=0.24.1
+setuptools~=65.5.0
+packaging~=23.1
