--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiosqlite==0.19.0
+alembic==1.12.1
 annotated-types==0.6.0
 anyio==3.7.1
 click==8.1.7
@@ -7,6 +9,8 @@ greenlet==3.0.1
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
+Mako==1.2.4
+MarkupSafe==2.1.3
 mypy==1.6.1
 mypy-extensions==1.0.0
 pydantic==2.4.2
