--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ colorama==0.4.6
 fastapi==0.104.1
 greenlet==3.0.1
 h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
 Mako==1.3.0
 MarkupSafe==2.1.3
