--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 dnspython==2.4.2
 email-validator==2.1.0.post1
 fastapi==0.108.0
+flake8==7.0.0
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
@@ -19,13 +20,16 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
+mccabe==0.7.0
 mypy==1.8.0
 mypy-extensions==1.0.0
 orjson==3.9.10
+pycodestyle==2.11.1
 pydantic==2.5.3
 pydantic-extra-types==2.2.0
 pydantic-settings==2.1.0
 pydantic_core==2.14.6
+pyflakes==3.2.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 python-stdnum==1.19
