--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.2.0
 certifi==2024.2.2
 click==8.1.7
 fastapi==0.109.2
+flake8==7.0.0
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
@@ -13,10 +14,13 @@ httpx==0.26.0
 idna==3.6
 Mako==1.3.2
 MarkupSafe==2.1.5
+mccabe==0.7.0
 mypy==1.8.0
 mypy-extensions==1.0.0
+pycodestyle==2.11.1
 pydantic==2.6.1
 pydantic_core==2.16.2
+pyflakes==3.2.0
 python-dotenv==1.0.1
 PyYAML==6.0.1
 sniffio==1.3.0
