fixed needed changes

--- a/alembic.ini
+++ b/alembic.ini
@@ -58,9 +58,9 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 
 # the output encoding used when revision files
 # are written from script.py.mako
-# output_encoding = utf-8
+# output_encoding = utf-8 sqlite:///D:\\PythonCoreTasks\\py-fastapi-city-temperature-management-api\\city_temp.db
 
-sqlalchemy.url = sqlite:///D:\\PythonCoreTasks\\py-fastapi-city-temperature-management-api\\city_temp.db
+sqlalchemy.url = sqlite:///city_temp.db
 
 
 [post_write_hooks]
